# writing_cleaning_db

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  script.sh
_docker/: Dockerfile
src/: connect_db.py  main.py  schemas.py  setting.py
